added analysis of scatterplots

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# WeatherPy"
+    "# WeatherPy "
    ]
   },
   {
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate Cities List"
+    "## Generate random cities"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Perform API Calls and create DataFrame"
+    "## Get current weather for each city from [OpenWeather](https://openweathermap.org/api) and create DataFrame"
    ]
   },
   {
@@ -772,19 +772,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Export data to [city_weather.csv]('output/city_weather.csv')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('output/city_weather.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exported data to [city_weather.csv]('output/city_weather.csv')"
    ]
   },
   {
@@ -1277,6 +1277,21 @@
     "    \n",
     "for i, data in enumerate(plot_data):\n",
     "    create_plot(data['x'],data['y'],data['title'],data['xlabel'],data['ylabel'],i+1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis of Scatter plots\n",
+    "* **Temperature (F) vs. Latitude**\n",
+    "    * The temperature of cities seems to increase the closer they are to the Equator and decrease the futher they are.\n",
+    "* **Humidity (%) vs. Latitude**\n",
+    "    * There does'nt seem to be a correlation between humidity and latitude. However cities with the lowest humidity (below 20%) seem to be clustered around 20 degrees of latitude.\n",
+    "* **Cloudiness (%) vs. Latitude**\n",
+    "    * There does not appear to be any correlation between cloudiness and latitude.\n",
+    "* **Wind Speed (mph) vs. Latitude**\n",
+    "    * There does not appear to be any correlation between wind speed and latitude."
    ]
   },
   {
