changed link csv

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -775,7 +775,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Export data to [city_weather.csv]('output/city_weather.csv')"
+    "## Export data to [city_weather.csv](output/city_weather.csv)"
    ]
   },
   {
